Solved some proof problems

--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -15,11 +15,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- The proposition if $x \\in \\mathbb{A}$ then $x \\in \\mathbb{A}$ is always true. Thus, $A \\subseteq A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,15 +46,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that $A \\cap B = B \\cap A$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- if $x \\in \\mathbb{A \\cap B}$ then $x \\in \\mathbb{A}$ and $x \\in \\mathbb{B}$, this is same as $x \\in \\mathbb{B}$ and $x \\in \\mathbb{A}$. That is $x \\in \\mathbb{B \\cap A}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,11 +78,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,6 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,6 +133,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that for each set $A$:\n",
     "- $A \\cong A$\n",
     "- if $B \\cong A$ then $B \\cong A$ for every pair of sets $A$ and $B$\n",
@@ -112,6 +152,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,6 +178,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove thet if we have a bijection between two finite sets than they have an equal number of elements"
    ]
   },
@@ -140,6 +194,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,9 +220,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that:\n",
     "$$A \\cap (B \\cup C)=(A \\cap B) \\cup (A\\cap C)$$\n",
     "$$A \\cup (B \\cap C)=(A \\cup B) \\cap (A\\cup C)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Let $x \\in {A \\cap (B \\cup C)}$. Then $x \\in {A}$ and $x \\in{B \\cup C}$. So, $x \\in{A}$ and $x \\in $ ${B}$ or ${C}$. Thus, $x \\in$ ${A}$ and ${B}$ or $x \\in $ ${A}$ and ${C}$. So, $x \\in{A \\cap B}$ or $x \\in{A \\cap C}$, meaning that $x \\in{(A \\cap B) \\cup (A \\cap C}$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
    ]
   },
   {
