More proof problems solved

--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -36,11 +36,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- if $x \\in {A \\cap B}$ then $x \\in {B}$. So, $A \\cap B = B$."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,7 +80,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- if $x \\in {A \\cup B}$ then $x \\in {A}$ or $x \\in {B}$. Since, ${B \\subset A}$ we have $x \\in {A}$. So, ${A \\cup B} = {A}$."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,11 +99,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- if $x \\in {A \\cup B}$ then $x \\in {A}$ or $x \\in {B}$. This is same as $x \\in {B}$ or $x \\in {A}$. So, $x \\in {B \\cup A}$."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,11 +125,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- let ${f \\circ g(x) = f \\circ g(y)}$. ---> ${f(g(x)) = f(g(y))}$. --> ${g(x) = g(y)}$. --> x = y.\n",
+    "- let ${f : A -> B}$ and ${g: B -> C}$. let $z \\in C$ Since g is surjective, there is a $y \\in B$ such that ${g(y) = z}$. Since ${f}$ is surjective, there is $x \\in {A}$ such that ${f(x) = y}$. Thus ${g(f(x)) = z}$. That shows ${g \\circ f}$ is surjective.\n",
+    "- We say a function is bijective "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,11 +151,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,11 +172,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,11 +193,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,11 +214,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,7 +240,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Let $x \\in {A \\cap (B \\cup C)}$. Then $x \\in {A}$ and $x \\in{B \\cup C}$. So, $x \\in{A}$ and $x \\in $ ${B}$ or ${C}$. Thus, $x \\in$ ${A}$ and ${B}$ or $x \\in $ ${A}$ and ${C}$. So, $x \\in{A \\cap B}$ or $x \\in{A \\cap C}$, meaning that $x \\in{(A \\cap B) \\cup (A \\cap C}$. "
+    "- Let $x \\in {A \\cap (B \\cup C)}$. Then $x \\in {A}$ and $x \\in{B \\cup C}$. So, $x \\in{A}$ and $x \\in $ ${B}$ or ${C}$. Thus, $x \\in$ ${A}$ and ${B}$ or $x \\in $ ${A}$ and ${C}$. So, $x \\in{A \\cap B}$ or $x \\in{A \\cap C}$, meaning that $x \\in{(A \\cap B) \\cup (A \\cap C}$.\n",
+    "\n",
+    "- Let $x \\in {A \\cup (B \\cap C)}$. Then $x \\in A$ or $x \\in {B \\cap C}$. So, $x \\in A$ or $x \\in$ ${B}$ and ${C}$. So, $x \\in$ ${A}$ or ${B}$ and $x \\in$ ${A}$ or ${C}$. Thus, $x \\in A \\cup B$ and $x \\in {A \\cup C}$. So, $x \\in (A \\cup B) \\cap (A \\cup B)$."
    ]
   },
   {
