Solved all problems (hope so)

--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -32,6 +32,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Empty set a $\\emptyset$ is a set without elements at all and which is contained in any set $\\emptyset \\subseteq A$ for any $A \\in Set$ so $\\emptyset$ is the \"smallest\" set (Proof it)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Empty set is set that does not contain any elements, it has zero elemetns. Empty set is subset of any set, because whatver set contains it will also contain set which contains no elements. So even empty set will be subset to itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that if $B \\subset A$ then $A \\cap B = B$"
    ]
   },
@@ -130,7 +151,7 @@
    "source": [
     "- let ${f \\circ g(x) = f \\circ g(y)}$. ---> ${f(g(x)) = f(g(y))}$. --> ${g(x) = g(y)}$. --> x = y.\n",
     "- let ${f : A -> B}$ and ${g: B -> C}$. let $z \\in C$ Since g is surjective, there is a $y \\in B$ such that ${g(y) = z}$. Since ${f}$ is surjective, there is $x \\in {A}$ such that ${f(x) = y}$. Thus ${g(f(x)) = z}$. That shows ${g \\circ f}$ is surjective.\n",
-    "- We say a function is bijective "
+    "- We say a function ${f}$ is bijective if and only if ${f}$ is both injective and surjective. And following from above two proves we can say that composition of bijections is bijection itself."
    ]
   },
   {
@@ -154,7 +175,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- ${A \\to A}$ is a surjective and injective relation. For ${x \\in A}$ we have ${x \\in A}$ which is equal and It means it is surjective. For ${x}$ and ${y}$ ${\\in A}$ if they are equal to each other, meaning that it is injective. So, relationship between A and A is bijection, hence $A \\cong A$.\n",
+    "- if $B \\cong A$  there is bijection between them. If these sets are bijective picking pair of sets from A and B will also have a bijective relationship.\n",
+    "- if $A \\cong B$ and $B \\cong C$, which means A and B have bijection and B and C too. For each ${b \\in B}$ we have only one ${a \\in A}$. Same applies to B and C. If we reverse the order we will see that for every c we have one b and for every b we have one a, so there is bijection between A and C for every triplect A, B, C."
    ]
   },
   {
@@ -175,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- Let N be set of natural numbers and E set of even numbers. We have ${N \\to E}$. For each ${e \\in E}$ we have one ${n \\in N}$, so they are surjective and injective. So there is bijection between set of natural and even numbers."
    ]
   },
   {
@@ -196,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- Let A and B be finite sets with $A \\cong B$. Let B be larger then A, so relationship won't be bijective so they must have equal number of elements."
    ]
   },
   {
@@ -217,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- For ${A \\times B}$ we have ${(a, b)}$ for every ${a \\in A, b \\in B}$. Same applies to ${B \\times A}$. Number of elemtns will be same for each element in ${B \\times A}$, so there is surjectivity and injectivity. So, there is bijection between A and B."
    ]
   },
   {
@@ -267,11 +290,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$\\begin{align}\n",
+    "    X + a &= \\begin{pmatrix}\n",
+    "        {x_{11} + a} & {x_{12} + a} & \\dots {x_{1m} + a} \\\\\n",
+    "        {x_{21} + a} & {x_{22} + a} & \\dots {x_{2m} + a} \\\\\n",
+    "        \\vdots & \\vdots & \\vdots \\\\\n",
+    "        {x_{n1} + a} & {x_{n2} + a} & \\dots {x_{nm} + a} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "$\\begin{align}\n",
+    "    a + X&= \\begin{pmatrix}\n",
+    "        {a + x_{11}} & {a + x_{12}} & \\dots {a + x_{1m}} \\\\\n",
+    "        {a + x_{21}} & {a + x_{22}} & \\dots {a + x_{2m}} \\\\\n",
+    "        \\vdots & \\vdots & \\vdots \\\\\n",
+    "        {a + x_{n1}} & {a + x_{n2}} & \\dots {a + x_{nm}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "So, ${a + X = X + a}$\n",
+    "\n",
+    "$\\begin{align}\n",
+    "    Xa &= \\begin{pmatrix}\n",
+    "        {x_{11}a} & {x_{12}a} & \\dots {x_{1m}a} \\\\\n",
+    "        {x_{21}a} & {x_{22}a} & \\dots {x_{2m}a} \\\\\n",
+    "        \\vdots & \\vdots & \\vdots \\\\\n",
+    "        {x_{n1}a} & {x_{n2}a} & \\dots {x_{nm}a} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "$\\begin{align}\n",
+    "    aX &= \\begin{pmatrix}\n",
+    "        {ax_{11}} & {ax_{12}} & \\dots {ax_{1m}} \\\\\n",
+    "        {ax_{21}} & {ax_{22}} & \\dots {ax_{2m}} \\\\\n",
+    "        \\vdots & \\vdots & \\vdots \\\\\n",
+    "        {ax_{n1}} & {ax_{n2}} & \\dots {ax_{nm}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "So, ${aX = Xa}$.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,11 +349,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$v^{T}$\n",
+    "= $\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {v_{1}} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        {v_{n}}\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "$u$ = $\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {u_{1}}& \\dots {u_{n}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "$v^{T}u$ = \n",
+    "$\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {v_{1}u_{1}}& \\dots {v_{n}u_{n}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "$v$ = $\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {u_{1}}& \\dots {u_{n}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "$u^{T}$ = \n",
+    " $\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {u_{1}} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        {u_{n}}\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "and $vu^{T}$ = \n",
+    "$\\begin{align}\n",
+    " \\begin{pmatrix}\n",
+    "        {v_{1}u_{1}}& \\dots {v_{n}u_{n}} \\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{align}$\n",
+    "\n",
+    "So, $v^{T}u = vu^{T}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,11 +412,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- $(AB)^T_{i,j} = \\sum_{k=1}^{n} a_{j, k} b_{k,i} = AB_{j,i}$\n",
+    "\n",
+    "    $(B^{T}A^{T})_{i,j} = \\sum_{k=1}^{n} B^{T}_{i, k} A^{T}_{k,j} = \\sum_{k=1}^{n}b_{k,i} a_{j, k}$.\n",
+    "\n",
+    "    So, $(AB)^T = B^T A^T$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------"
+   ]
   }
  ],
  "metadata": {
