--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Author: <font color='yellow'>Giorgi Sharmiashvili</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Set theory basics"
    ]
   },
