--- a/probability_problems.ipynb
+++ b/probability_problems.ipynb
@@ -53,16 +53,14 @@
    "metadata": {},
    "source": [
     "#### Prove the following mesure properties:\n",
-    "- if $A \\subset B$ then $\\mu(A) \\le \\mu(B)$\n",
-    "<br>\n",
-    "Proof: $(B - A) \\cup (A \\cap B) = (B - A) \\cup A = B$ and $(B - A) \\cap (A \\cap B) = \\emptyset$ so $\\mu((B - A) \\cup (A \\cap B)) = \\mu(B - A) + \\mu(A \\cap B) = \\mu(B - A) + \\mu(A) = \\mu(B)$ so $\\mu(A) \\le \\mu(B)$"
+    "- if $A \\subset B$ then $\\mu(A) \\le \\mu(B)$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- $(B - A) \\cup (A \\cap B) = (B - A) \\cup A = B$ and $(B - A) \\cap (A \\cap B) = \\emptyset$ so $\\mu((B - A) \\cup (A \\cap B)) = \\mu(B - A) + \\mu(A \\cap B) = \\mu(B - A) + \\mu(A) = \\mu(B)$ so $\\mu(A) \\le \\mu(B)$"
    ]
   },
   {
@@ -93,7 +91,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- TODO"
+    "- ${A = A \\cup \\Omega = A \\cap (B \\cup \\bar{B}) = (A \\cap B) \\cup (A \\cap \\bar{B})}$ \n",
+    "    <br>${P(A) = P(A \\cap B) + P(A \\cap \\bar{B})}$\n",
+    "    <br>${A \\cup B = (A \\cup B) \\cap (B \\cup \\bar{B}) = (A \\cap \\bar{B}) \\cup B = (A \\cap \\bar{B}) \\cup (B \\cap (A \\cup \\bar{A})) = (A \\cap \\bar{B}) \\cup (B \\cap \\bar{A}) \\cup (A \\cap B)}$\n",
+    "    <br>${P(A \\cup B) = P(A \\cap \\bar{B}) + P(B \\cap \\bar{A}) + P(A \\cap B) = P(A) - P(A \\cap B) + P(B) - P(A \\cap B) + P(A \\cap B) = P(A) + P(B) - P(A \\cap B)}$"
    ]
   },
   {
@@ -122,6 +123,20 @@
     "<br>\n",
     "Denoted by $\\sigma^2$\n",
     "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------"
    ]
   }
  ],
