Solved more problems and fixed some bugs

--- a/linear_algebra_1_problems.ipynb
+++ b/linear_algebra_1_problems.ipynb
@@ -321,47 +321,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Union -> {1, 2, 3, 4, 5, 6}\n",
-      "Intersection -> {1, 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Intersection of sets\n",
-    "def intersection(A, B):\n",
-    "    intersection = set()\n",
-    "    for a in A:\n",
-    "        for b in B:\n",
-    "            if a in B and a not in intersection:\n",
-    "                intersection.add(a)\n",
-    "            if b in A and b not in intersection:\n",
-    "                intersection.add(b)\n",
-    "    return intersection\n",
+    "from itertools import chain, combinations\n",
+    "def powerset(iterable):\n",
+    "    s = set(iterable)\n",
+    "    return chain.from_iterable(combinations(s, r) for r in range(len(s)+1))\n",
     "\n",
-    "# Union of sets\n",
-    "def union(A, B):\n",
-    "    union = set()\n",
-    "    for a in A:\n",
-    "        for b in B:\n",
-    "            if a not in union:\n",
-    "                union.add(a)\n",
-    "            if b not in union:\n",
-    "                union.add(b)\n",
-    "    return union\n",
-    "    \n",
-    "# Define two sets\n",
-    "A = {1, 2, 3, 4}\n",
-    "B = {1, 2, 5, 6}\n",
+    "def union(A):\n",
+    "    return [a for a in set(A) | set(A)]\n",
     "\n",
-    "print(\"Union -> {}\".format(union(A, B)))\n",
-    "print(\"Intersection -> {}\".format(intersection(A, B)))    "
+    "def intersection(A):\n",
+    "    return [A[i] for i in range(len(A)) for k in range(1, len(A)) if A[i] in A[k]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define set\n",
+    "A = {1, 2, 3, 4, 5}\n",
+    "A_power = list(powerset(A))\n",
+    "A_inter = intersection(A_power)\n",
+    "A_union = union(A)"
    ]
   },
   {
@@ -372,73 +358,63 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also define cartesian product of any \"number\" of sets $\\prod_{i \\in I}{A_i}$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Implementation in Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['a', 1], 10]\n",
-      "[['a', 1], 20]\n",
-      "[['a', 1], 30]\n",
-      "[['a', 2], 10]\n",
-      "[['a', 2], 20]\n",
-      "[['a', 2], 30]\n",
-      "[['b', 1], 10]\n",
-      "[['b', 1], 20]\n",
-      "[['b', 1], 30]\n",
-      "[['b', 2], 10]\n",
-      "[['b', 2], 20]\n",
-      "[['b', 2], 30]\n",
-      "[['c', 1], 10]\n",
-      "[['c', 1], 20]\n",
-      "[['c', 1], 30]\n",
-      "[['c', 2], 10]\n",
-      "[['c', 2], 20]\n",
-      "[['c', 2], 30]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def cartesianProduct(A, B):\n",
-    "    product = []\n",
-    "    for a in A:\n",
-    "        for b in B:\n",
-    "            product.append([a, b])\n",
-    "    return product\n",
-    "            \n",
-    "def cartesian(list_of_sets):\n",
-    "    product = cartesianProduct(list_of_sets[0], list_of_sets[1])\n",
-    "    for i in range(2, len(list_of_sets)):\n",
-    "        product = cartesianProduct(product, list_of_sets[i])\n",
-    "    return product\n",
-    "\n",
-    "# Define sets\n",
-    "A = {\"a\", \"b\", \"c\"}\n",
-    "B = {1, 2}\n",
-    "C = {10, 20, 30}\n",
-    "\n",
-    "product = cartesian([A, B, C])\n",
-    "for el in sorted(product):\n",
-    "    print(el)"
+    "set(A_union) == A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement in python\n",
+    "def cartesian(A):\n",
+    "    return {(i, k) for i in A for k in A}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A_cart = cartesian(A_power)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(A_cart) == len(A_power) * len(A_power)"
    ]
   },
   {
